--- a/src/wp-content/themes/azc/style.css
+++ b/src/wp-content/themes/azc/style.css
@@ -150,6 +150,24 @@ p {
   .submenu-work {
     top: 75px; } }
 
+#menu-principal li:nth-of-type(2),
+#menu-principal-1 li:nth-of-type(2),
+.submenu-work {
+  left: 24vw; }
+
+#menu-principal li:nth-of-type(3),
+#menu-principal-1 li:nth-of-type(3) {
+  left: 55vw; }
+
+@media (max-width: 1099px) {
+  #menu-principal li:nth-of-type(2),
+  #menu-principal-1 li:nth-of-type(2),
+  .submenu-work {
+    left: 22vw; }
+  #menu-principal li:nth-of-type(3),
+  #menu-principal-1 li:nth-of-type(3) {
+    left: 53vw; } }
+
 @media (max-width: 768px) {
   #menu-principal li:nth-of-type(2),
   #menu-principal-1 li:nth-of-type(2) {
@@ -161,28 +179,18 @@ p {
     top: 40px;
     left: 20px; } }
 
-@media (min-width: 769px) {
+@media (max-width: 400px) {
   #menu-principal li:nth-of-type(2),
-  #menu-principal-1 li:nth-of-type(2),
-  .submenu-work {
-    left: 22vw; }
+  #menu-principal-1 li:nth-of-type(2) {
+    left: 25vw; }
   #menu-principal li:nth-of-type(3),
   #menu-principal-1 li:nth-of-type(3) {
-    left: 53vw; } }
-
-@media (min-width: 1100px) {
-  #menu-principal li:nth-of-type(2),
-  #menu-principal-1 li:nth-of-type(2),
-  .submenu-work {
-    left: 24vw; }
-  #menu-principal li:nth-of-type(3),
-  #menu-principal-1 li:nth-of-type(3) {
-    left: 55vw; } }
+    left: 52vw; } }
 
 @media (max-width: 340px) {
   #menu-principal li:nth-of-type(2),
   #menu-principal-1 li:nth-of-type(2) {
-    left: 22vw; }
+    left: 24vw; }
   #menu-principal li:nth-of-type(3),
   #menu-principal-1 li:nth-of-type(3) {
     left: 52vw; } }
@@ -915,7 +923,7 @@ a:hover {
   .work-single .img-work-caract {
     position: absolute;
     bottom: 0;
-    width: calc(100% - 5vw);
+    width: 100%;
     text-align: center; }
     .work-single .img-work-caract p {
       margin: 0; }
